Camel: Learn as Junk filter action not actually running the learn function
The feature added in evolution#2161 (closed), while it appears to be working, is not actually.
The filter runs, but the actual learning operation is not happening.
To be clear, the filter debug log shows the action being run:
2023-06-01 10:49:47 - Applied filter "Learn as Junk" to message from [redacted] - "[redacted]"
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does not match '[redacted]'
Header 'From' value ' [redacted]' does match '[redacted]'
Finished test of message uid:[redacted] subject:'[redacted' from 'O365 : Inbox' as MATCHED
Filter 'Learn as Junk' matched
Action: Set junklearn flag
Action: Set junk flag
Action: Stopped processing
Stopped processing per request
The difference is that when I press the Junk button, my bogofilter
script runs. I know that because it logs it's actions. When a (background -- not ctrl
-y
initiated) message filter does the above, nothing is logged by my bogofilter
script.
Additionally, if a message does not match any of those From
values above, and then I add that message's From
value to the filter and then use ctrl
-y
on that message, all of the above is logged in the filter debug log AND the bogofilter
script actually runs.
It's almost like the actual learn action (i.e. executing the defined spam learning tool) only happens when initiated from a user action and not automatic/incoming/background filtering.