I#480 - Camel: Learn as Junk filter action not actually running the learn function

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/480